2016-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@example): Add missing ) after @pxref.
	(@cartouche): Make example and output match.
	(@table): Remove superfluous closing quote (`indicating'' to 
	`indicating').
	(Internationalization): Change the word "yourself" to "the one".
	(@documentlanguage): Add missing closing quote.
	(Testing for Texinfo Commands): Change "consider true X" to
	"consider X to be true".
	(Format with texi2dvi): Add missing ) after @pxref.
	(Invoking texi2any): Change "texi2any accept" to "texi2any 
	accepts".
	(HTML Translation): Add missing ) after @pxref.

	All reports by Wensheng Xie <xiewensheng@gmail.com>.

2016-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Top): In @detailmenu for Info format 
	description, refer to nodes with their names instead of shorter 
	labels.  This is so that, for example, "info texinfo printindex"
	goes to the index entry for "printindex" instead of the
	"Info Format Printindex" node.
	(Other Customization Variables): Remove 
	'TEXINFO_COLUMN_FOR_DESCRIPTION' and 'indent_menu_descriptions'.

2016-11-08  Gavin Smith  <gavinsmith0123@gmail.com>

	Delay node name normalization until after parser is finished.

	* tp/Texinfo/Common.pm (parse_node_manual): Do not record 
	'normalized' value in return value.
	(%default_parser_state_configuration): Add array value 'targets'.

	* tp/Texinfo/Convert/HTML.pm (_parse_node_and_warn_external):
	Call 'normalize_node' and set 'normalized' value on return value.

	* tp/Texinfo/Parser.pm
	(_register_label): Store target in 'targets' array, instead
	of in 'labels' hash.  Don't do any error checking.
	(labels_information): If 'labels' hash is not already set on 
	parser object, generate it from the 'targets' array.  Check for 
	empty and duplicate node names.  Create 'nodes' array.
	(_check_empty_node): Remove check for empty node name after
	expansion.

	(_end_line) <@float, @node>: Always call _register_label, with